Fixed select input styling on iOS and Safari browsers

--- a/src/main/home/home.scss
+++ b/src/main/home/home.scss
@@ -526,6 +526,7 @@ section {
       }
 
       select {
+        -webkit-appearance: none;
         border-radius: 15px;
         margin-bottom: 15px;
         padding: 12px 21px;
